Allow image override

--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: {{ if .Values.containerRegistry }}{{ (printf "%s/" .Values.containerRegistry) }}{{ end }}{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: IfNotPresent
           command: [ "/bin/startup.sh" ]
           env:
