--- a/values.yaml
+++ b/values.yaml
@@ -10,6 +10,9 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+  busybox:
+    repository: busybox
+
 nameOverride: ""
 fullnameOverride: ""
 
