--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -111,6 +111,9 @@ spec:
             limits:
               cpu: {{ .Values.resources.limits.cpu }}
               memory: {{ .Values.resources.limits.memory }}
+      {{- with .Values.serviceAccount }}
+      serviceAccountName: {{ .name | default (include "zookeeper.fullname" $) }}
+      {{- end }}
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
